--- a/tset/index.html
+++ b/tset/index.html
@@ -14,6 +14,14 @@
     456
     789
     <b></b>
+    <script>
+        let ary = [1, 2, 3, 3, 4, 4, 6]
+        // let s = new Set(ary)
+        // // s.add(...ary)
+        // console.log(s)
+        let newAry = [...new Set(ary)]
+        console.log(newAry)
+    </script>
 </body>
 
 </html>
