--- a/tset/index.html
+++ b/tset/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <p></p>
+    <!-- <p></p>
     <div></div>
     123
     456
@@ -20,7 +20,8 @@
         // // s.add(...ary)
         // console.log(s)
         let newAry = [...new Set(ary)]
-        console.log(newAry)
+        console.log(newAry) -->
+        <p>这是创建的分支</p>
     </script>
 </body>
 
