--- a/tset/index.html
+++ b/tset/index.html
@@ -8,20 +8,20 @@
 </head>
 
 <body>
-    <!-- <p></p>
+    <p></p>
     <div></div>
     123
     456
     789
     <b></b>
+    <p>这是创建的分支</p>
     <script>
         let ary = [1, 2, 3, 3, 4, 4, 6]
         // let s = new Set(ary)
         // // s.add(...ary)
         // console.log(s)
         let newAry = [...new Set(ary)]
-        console.log(newAry) -->
-        <p>这是创建的分支</p>
+        console.log(newAry)
     </script>
 </body>
 
